fixed element overflow

--- a/css/style.css
+++ b/css/style.css
@@ -59,18 +59,20 @@ body {
   padding: 0px;
 }
 .cards .c img {
+  max-height: 100%;
   position: relative;
   left: -0.08rem;
   top: 0.1px;
+  width: 18.21rem;
   padding: 0px;
   margin: 0px;
-  width: 18.21rem;
   border-radius: 5%;
-  grid-row: 1/4;
+  grid-row: 1/5;
 }
 .cards .c h2 {
   color: #fa824c;
   grid-row: 5/6;
+  align-items: center;
 }
 .cards .c p {
   grid-row: 6/8;
